<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/report"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/reportes" />
        <item
            android:id="@+id/smartFilter"
            android:icon="@drawable/ic_smartfilter_black_24dp"
            android:title="@string/filtro_inteligente" />
        <item
            android:id="@+id/mapLocation"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/ubicaci_n_de_equipos" />
    </group>

    <item android:title="@string/opciones_adicionales">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/ajustes" />
            <item
                android:id="@+id/aboutUs"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/acerca_de_nosotros"/>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
