<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo7"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <!-- Barra de progreso -->
    <ProgressBar
        android:id="@+id/loginProgress"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <!-- Logo de la Empresa -->
    <ImageView
        android:id="@+id/img_Logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo_innova"
        android:contentDescription="@string/enterpriseLogo"/>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_Logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColorHint="@color/colorPrimaryDark">

                <!-- User's EditText -->
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColorHint="@color/colorPrimaryDark"
                app:passwordToggleEnabled="true">

                <!-- User's Password EditText -->
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <!-- Button LogIn -->
            <Button
                android:id="@+id/btn_loginIn"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/ingresar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <!-- Button Help -->
    <Button
        android:id="@+id/btn_help"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/help"
        android:textColor="@color/colorAccent" />

    <!-- Text CopyRight -->
    <TextView
        android:id="@+id/txt_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_help"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="© Copyright 2018."
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/txt_todos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_copy"
        android:layout_centerHorizontal="true"
        android:text="Todos los Derechos Reservados"
        android:textColor="@color/colorAccent" />

</RelativeLayout>